Metadata/objects/Refund_Line__c.object
<CustomObject>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <referenceTo>Payment__c</referenceTo>
        <relationshipLabel>Refund Lines</relationshipLabel>
        <relationshipName>Refund_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Refund_Amount__c</fullName>
        <label>Refund Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Refund__c</fullName>
        <label>Refund</label>
        <referenceTo>Refund__c</referenceTo>
        <relationshipLabel>Refund Lines</relationshipLabel>
        <relationshipName>Refund_Lines</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Completed</fullName>
                <color>#78C953</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
                <color>#FF0000</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Refund Line</label>
    <nameField>
        <displayFormat>RL-{0000}</displayFormat>
        <label>Refund Line Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Refund Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Rule_on_Refund_Amount</fullName>
        <active>true</active>
        <errorConditionFormula>ISCHANGED( Refund_Amount__c )</errorConditionFormula>
        <errorMessage>We can not modify the Refund Amount</errorMessage>
    </validationRules>
</CustomObject>